# eSDK_eLTE_SDK_Windows

./: README.md
CI/script/: compile_player.bat  compile_sdk.bat  compile_sdk_player.bat
sample/: simplest_libvlc_streamer.cpp
sample/HTML5 Video/: test.html  test.sdp
sample/eLTE_Player/eLTE_Demo_JS/html/: eLTE_Player.html
sample/eLTE_Player/eLTE_Demo_JS/js/: eLTE_Player.js
sample/eLTE_Player/eLTE_PlayerDemo/: eLTE_PlayerDemo.sln
sample/eLTE_Player/eLTE_PlayerDemo/eLTE_PlayerDemo/: CallDlg.cpp  CallDlg.h  CreatePatchGroupDlg.cpp  CreatePatchGroupDlg.h  DConsoleDlg.cpp  DConsoleDlg.h  DGNAParam.cpp  DataType.h  DispatchParamDlg.cpp  InfoDlg.cpp  InfoDlg.h  ModifyDGNADlg.cpp  ModifyDGNADlg.h  P2PTransferDlg.cpp  P2PTransferDlg.h  PTZCtrlDlg.cpp  PTZCtrlDlg.h  RECFileDlg.cpp  RECFileDlg.h  ReadMe.txt  SDSMessage.cpp  SDSMessage.h  SetGisCfgDlg.cpp  SetGisCfgDlg.h  TempUserJoinGrpCall.cpp  TempUserJoinGrpCall.h  UnDispatchParamDlg.cpp  VWall.cpp  VWall.h  VideoDlg.cpp  VideoDlg.h  VideoParamDlg.cpp  eLTE_PlayerDemo.cpp  eLTE_PlayerDemo.h  eLTE_PlayerDemo.rc  eLTE_PlayerDemo.vcxproj  eLTE_PlayerDemo.vcxproj.filters  eLTE_PlayerDemoDlg.cpp  eLTE_PlayerDemoDlg.h  elte_playerctrl1.cpp  (+4 more)
sample/eLTE_Player/eLTE_experience_Demo/: home.html
sample/eLTE_Player/eLTE_experience_Demo/css/: demo.css  jquery.guide.css
sample/eLTE_Player/eLTE_experience_Demo/data/: document.js  styles.css
sample/eLTE_Player/eLTE_experience_Demo/js/: eLTE_Player.js  mapOperations.js
sample/eLTE_SDK/eLTE_SDK_Demo/: eLTE_SDK_Demo.sln
sample/eLTE_SDK/eLTE_SDK_Demo/eLTE_SDK_Demo/: CallDlg.cpp  CallDlg.h  CreateGroupDlg.cpp  CreateGroupDlg.h  CreatePatchGroupDlg.cpp  CreatePatchGroupDlg.h  DConsoleDlg.cpp  DConsoleDlg.h  DataType.h  DispatchParamDlg.cpp  InfoDlg.cpp  InfoDlg.h  MediaPlayerDlg.cpp  MediaPlayerDlgMgr.cpp  MediaPlayerDlgMgr.h  ModifyDGNADlg.cpp  ModifyDGNADlg.h  P2PTransferDlg.cpp  (+32 more)
sample/eLTE_chrome/FireBreath-2.0/: FB2_JS_DEMO.htm  FB2_JS_DEMO_Chrome.html  install_host.bat  org.firebreath.firewyrmhost.json
src/platform/SDK/: dcconf.ini  dcguiconf.ini  media_sdk.lib  mediastreamer2.lib  sdk.lib  sdk_json.lib  ubp_sdk_core.lib  ubp_sdk_frm.lib  ubp_sdk_prov.lib  ubp_trace.lib
src/platform/SDK/include/platform/: CMakeLists.txt  platform_msg.proto  sca_msg.proto
src/platform/SDK/include/platform/modules/cert_man/: certman_def.hpp  ubp_certman.hpp
src/platform/SDK/include/platform/modules/dao/: dao_assistant.hpp  dao_common.hpp  dao_nativeoperators.hpp
src/platform/SDK/include/platform/modules/encryption/: encryption.hpp  encryption_common.hpp  encryption_def.hpp
src/platform/SDK/include/platform/modules/error/: ubp_error.hpp
src/platform/SDK/include/platform/modules/ftp/: ftp_def.hpp  ftp_service.hpp
src/platform/SDK/include/platform/modules/meta/: meta_def.hpp  ubp_metaservice.hpp
src/platform/SDK/include/platform/modules/mq/: mq_context_itf.hpp  mq_dispatch.hpp
src/platform/SDK/include/platform/modules/query/: mq_query.hpp
src/platform/SDK/include/platform/modules/sca/: ubp_cfg_mgr.hpp  ubp_svc_env.hpp
src/platform/SDK/include/platform/modules/svcmgr/: service_info.hpp  ubp_svc_mgr.hpp
src/platform/SDK/include/platform/modules/timer/: ubp_timer.hpp
src/platform/SDK/include/platform/modules/util/: ace_timer_wrapper.hpp  aes_encript.hpp  cdr_trace.hpp  enc_4_cmd.hpp  get_master_db_info.hpp  id_generate.hpp  ini_dao.hpp  locale_service.hpp  mq_tools.hpp  rtcp_trace.hpp  string_util.hpp  util_trace.hpp  utils.hpp
src/platform/SDK/include/platform/modules/workkey/: workkey.hpp  workkey_def.hpp
src/platform/eSDKClientLogAPI/: eSDKClientLogCfg.ini
src/source/eLTE_Player/: eLTE_Player.bat
src/source/eLTE_RM_SDK/: eLTE_RM_SDK.sln
src/source/eLTE_SDK/: eLTE_SDK.bat  eLTE_SDK.sln
(+841 files in other folders)
